# libredirectionio

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.in  README.md  cbindgen.toml  configure.ac  install.json  libredirectionio.pc.in  rustfmt.toml  wrangler.toml.dist
.github/workflows/: beta-release.yml  stable-release.yml  test-release.yml  test-set-env.yml
benches/: build_router_rule_benchmark.rs  filter_body_benchmark.rs  match_rule_benchmark.rs  perf.rs  string_alloc_benchmark.rs  test_examples_benchmark.rs
pkg/: package.json  redirectionio.d.ts  redirectionio.js  tsconfig.json
src/: api.rs  bin.rs  build.rs  callback_log.rs  dot.rs  ffi.rs  ffi_helpers.rs  lib.rs  lib_old.rs  main.rs  regex.rs  router_config.rs  rule.rs  wasm_api.rs
src/action/: action.rs  ffi.rs  log_override.rs  mod.rs  peer_override.rs  run.rs  status_code_update.rs  trace.rs  unit_trace.rs  wasm.rs
src/api/: body_filter.rs  date_time.rs  examples.rs  explain_request.rs  ffi.rs  header.rs  header_filter.rs  impact.rs  ip.rs  log.rs  marker.rs  mod.rs  peer.rs  redirection_loop.rs  request.rs  rule.rs  rules_message.rs  source.rs  test_examples.rs  trace.rs  transformer.rs  unit_ids.rs  variable.rs  wasm.rs
src/filter/: brotli_filter_body.rs  buffer.rs  buffer_filter_body.rs  error.rs  filter_body.rs  filter_header.rs  gzip_filter_body.rs  html_filter_body.rs  html_to_markdown.rs  mod.rs  text_filter_body.rs
src/filter/body_action/: body_append.rs  body_prepend.rs  body_replace.rs  mod.rs
src/filter/compress/: decode.rs  encode.rs  mod.rs
src/filter/encode/: decode.rs  encode.rs  mod.rs
src/filter/encoding/: decode.rs  encode.rs  mod.rs
src/filter/header_action/: header_add.rs  header_default.rs  header_override.rs  header_remove.rs  header_replace.rs  mod.rs
src/filter/html_body_action/: body_after.rs  body_append.rs  body_before.rs  body_capture.rs  body_prepend.rs  body_remove.rs  body_replace.rs  mod.rs
src/html/: error.rs  mod.rs
src/http/: addr.rs  ffi.rs  header.rs  mod.rs  query.rs  request.rs  trusted_proxies.rs  wasm.rs
src/marker/: mod.rs
src/marker/transformer/: camelize.rs  dasherize.rs  lowercase.rs  replace.rs  slice.rs  underscorize.rs  uppercase.rs
src/regex_radix_tree/: item.rs  iter.rs  leaf.rs  mod.rs  node.rs  prefix.rs  regex.rs  regex_node.rs  storage.rs  storage_vec.rs  trace.rs  tree.rs
src/regex_radix_tree_new/: item.rs  leaf.rs  mod.rs  node.rs  regex.rs  tree.rs
src/router/: api.rs  config.rs  marker_string.rs  mod.rs  route.rs  route_datetime.rs  route_header.rs  route_ip.rs  route_time.rs  route_weekday.rs  router_header.rs  router_host.rs  router_method.rs  router_path.rs  router_scheme.rs  rule.rs  trace.rs  transform.rs  url_matcher.rs  url_matcher_regex.rs  url_matcher_rules.rs
src/router/request_matcher/: datetime.rs  header.rs  host.rs  ip.rs  matcher_tree_storage.rs  method.rs  mod.rs  path_and_query.rs  regex_item_matcher.rs  route_matcher.rs  scheme.rs  time.rs  weekday.rs
src/router/transformer/: camelize.rs  dasherize.rs  lowercase.rs  mod.rs  replace.rs  slice.rs  underscorize.rs  uppercase.rs
src/router_new/: mod.rs  route.rs  route_datetime.rs  trace.rs
src/router_new/request_matcher/: datetime.rs  header.rs  host.rs  ip.rs  method.rs  mod.rs  path_and_query.rs  route_matcher.rs  scheme.rs
tests/: playground.rs  redirectionio_router_test.rs  redirectionio_test_examples.rs  small-stack.rs
tests/templates/: main.rs.j2  redirectionio_router_test.rs.j2  redirectionio_test_examples.rs.j2
tests/test_examples/: configuration_log_off.in.json  configuration_log_off.out.json  configuration_reset_on.in.json  configuration_reset_on.out.json  filter_html.in.json  filter_html.out.json  header_add.in.json  header_add.out.json  header_override.in.json  header_override.out.json  header_remove.in.json  header_remove.out.json  header_replace.in.json  header_replace.out.json  must_match_false_broken.in.json  must_match_false_broken.out.json  must_match_true_broken.in.json  must_match_true_broken.out.json  no_examples.in.json  no_examples.out.json  no_rules.in.json  one_rule_one_example.in.json
worker/: metadata_wasm.json  worker.js
