[package]
name = "redirectionio"
description = "Redirection IO Library to handle matching rule, redirect and filtering headers and body."
repository = "https://github.com/redirectionio/libredirectionio"
license = "MIT"
version = "2.9.0"
authors = ["Joel Wurtz <jwurtz@redirection.io>"]
edition = "2018"
build = "src/build.rs"

[lib]
name = "redirectionio"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen="0.26.0"
glob = "^0.3.1"
libtool = "0.1.1"
linked_hash_set = { version = "0.1.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.30"
tera = "1.19.1"

[features]
default = ["compress", "router"]
compress = ["dep:brotli", "dep:flate2"]
router = []
dot = ["dep:dot_graph"]

[dependencies]
brotli = { version = "3.4.0", optional = true }
cfg-if = "1.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
cidr = { version = "0.2.2", features = ["serde"] }
dot_graph = { version = "0.2.3", optional = true }
flate2 = { version = "1.0.28", optional = true }
heck = "0.4.1"
http = "0.2.11"
lazy_static = "1.4.0"
linked_hash_set = "0.1.4"
log = "0.4.20"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.3"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.111"
stderrlog = "0.5.4"
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph"] }
criterion = { version = "0.5", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7" }

[[bench]]
name = "match_rule_benchmark"
harness = false

[[bench]]
name = "build_router_rule_benchmark"
harness = false

[[bench]]
name = "filter_body_benchmark"
harness = false

[[bench]]
name = "test_examples_benchmark"
harness = false

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
