[package]
name = "redirectionio"
description = "Redirection IO Library to handle matching rule, redirect and filtering headers and body."
repository = "https://github.com/redirectionio/libredirectionio"
license = "MIT"
version = "2.11.2"
authors = ["Joel Wurtz <jwurtz@redirection.io>"]
edition = "2018"
build = "src/build.rs"

[lib]
name = "redirectionio"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "0.27.0"
glob = "^0.3.1"
libtool = "0.1.1"
linked_hash_set = { version = "0.1.4", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.0"

[features]
default = ["compress", "router"]
compress = ["dep:brotli", "dep:flate2"]
router = []
dot = ["dep:dot_graph"]
wasmbind = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
futures-util = { version = "0.3.30", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
wasm-logger = "0.2.0"

[dependencies]
brotli = { version = "3.5.0", optional = true }
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
cidr = { version = "0.2.3", features = ["serde"] }
dot_graph = { version = "0.2.3", optional = true }
flate2 = { version = "1.0.33", optional = true }
heck = "0.5.0"
http = "0.2.12"
lazy_static = "1.5.0"
linked_hash_set = { version = "0.1.4", features = ["serde"] }
log = "0.4.22"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.6"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
stderrlog = "0.6.0"
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph"] }
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "match_rule_benchmark"
harness = false

[[bench]]
name = "build_router_rule_benchmark"
harness = false

[[bench]]
name = "filter_body_benchmark"
harness = false

[[bench]]
name = "test_examples_benchmark"
harness = false

[dependencies.web-sys]
version = "0.3.70"
features = [
    "console",
]
