[package]
name = "redirectionio"
description = "Redirection IO Library to handle matching rule, redirect and filtering headers and body."
repository = "https://github.com/redirectionio/libredirectionio"
license = "MIT"
version = "3.0.0-beta.2"
authors = ["Joel Wurtz <jwurtz@redirection.io>"]
edition = "2024"
build = "src/build.rs"

[lib]
name = "redirectionio"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "0.29.2"
glob = "^0.3.3"
libtool = "0.1.1"
linked_hash_set = { version = "0.1.6", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.1"

[features]
default = ["compress", "router"]
compress = ["dep:brotli", "dep:flate2"]
router = []
dot = ["dep:dot_graph"]
wasmbind = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
futures-util = { version = "0.3.31", default-features = false }
getrandom = { version = "0.3.4", features = ["js"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.106"
wasm-logger = "0.2.0"

[dependencies]
brotli = { version = "8.0.2", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
cidr = { version = "0.3.2", features = ["serde"] }
dot_graph = { version = "0.2.3", optional = true }
flate2 = { version = "1.1.5", optional = true }
heck = "0.5.0"
http = "1.4.0"
lazy_static = "1.5.0"
linked_hash_set = { version = "0.1.6", features = ["serde"] }
log = "0.4.29"
lol_html = "2.7.0"
percent-encoding = "2.3.2"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
stderrlog = "0.6.0"
tracing = "0.1.44"
trusted-proxies = "0.3.0"
url = "2.5.7"

[dev-dependencies]
pprof = { version = "0.15.0", features = ["flamegraph"] }
criterion = { version = "0.8.1", default-features = false }

[[bench]]
name = "match_rule_benchmark"
harness = false

[[bench]]
name = "build_router_rule_benchmark"
harness = false

[[bench]]
name = "filter_body_benchmark"
harness = false

[[bench]]
name = "test_examples_benchmark"
harness = false

[dependencies.web-sys]
version = "0.3.83"
features = [
    "console",
]
